--- a/app/src/main/res/layout/alert_guardar_familia.xml
+++ b/app/src/main/res/layout/alert_guardar_familia.xml
@@ -23,12 +23,13 @@
         android:id="@+id/GUARDARFAMILIA"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:layout_marginRight="5dp"
         android:background="@drawable/button1"
         android:text="@string/guardar"
         android:textColor="#4A4A4A"
         app:layout_constraintBottom_toBottomOf="@+id/CANCELAR1"
-        app:layout_constraintEnd_toEndOf="@+id/MAS"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.909"
         app:layout_constraintStart_toEndOf="@+id/CANCELAR1"
         app:layout_constraintTop_toTopOf="@+id/CANCELAR1"
         app:layout_constraintVertical_bias="0.0" />
@@ -37,17 +38,15 @@
         android:id="@+id/CANCELAR1"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/button1"
         android:text="@string/cancelar"
         android:textColor="#4A4A4A"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/MAS"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/MENOS"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout6"
-        app:layout_constraintVertical_bias="0.549" />
+        app:layout_constraintHorizontal_bias="0.056"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/CALLE"
@@ -146,5 +145,41 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/constraintLayout6"
         app:srcCompat="@drawable/menos" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/CANCELAR1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">
+
+        <ImageView
+            android:id="@+id/ICONOROJO"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/icono_mapa_rojo" />
+
+        <ImageView
+            android:id="@+id/ICONOAMARILLO"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/icono_mapa_amarilla" />
+
+        <ImageView
+            android:id="@+id/ICONOVERDE"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/icono_mapa_verde" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
