--- a/app/src/main/res/layout/activity_persona.xml
+++ b/app/src/main/res/layout/activity_persona.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#4A4A4A"
-    android:onClick="Acompañamiento"
     tools:context=".Persona">
 
     <TabHost
@@ -242,7 +241,8 @@
                                 android:layout_width="130dp"
                                 android:layout_height="200dp"
                                 android:layout_margin="10dp"
-                                android:background="@drawable/fondo2">
+                                android:background="@drawable/fondo2"
+                                android:onClick="Adicciones">
 
                                 <ImageView
                                     android:id="@+id/ICONOADICCIONES"
@@ -358,7 +358,8 @@
                                 android:layout_width="130dp"
                                 android:layout_height="200dp"
                                 android:layout_margin="10dp"
-                                android:background="@drawable/fondo2">
+                                android:background="@drawable/fondo2"
+                                android:onClick="Ocio">
 
                                 <ImageView
                                     android:id="@+id/ICONOOCIO"
