--- a/app/src/main/res/layout/activity_persona.xml
+++ b/app/src/main/res/layout/activity_persona.xml
@@ -182,7 +182,8 @@
                                 android:layout_width="130dp"
                                 android:layout_height="200dp"
                                 android:layout_margin="10dp"
-                                android:background="@drawable/fondo2">
+                                android:background="@drawable/fondo2"
+                                android:onClick="Violencia">
 
                                 <ImageView
                                     android:id="@+id/ICONOTRANSTORNOSMENTALES"
@@ -300,7 +301,8 @@
                                 android:layout_width="130dp"
                                 android:layout_height="200dp"
                                 android:layout_margin="10dp"
-                                android:background="@drawable/fondo2">
+                                android:background="@drawable/fondo2"
+                                android:onClick="Violencia">
 
                                 <ImageView
                                     android:id="@+id/ICONOVIOLENCIA"
