--- a/app/src/main/res/layout/alert_informacion_personal.xml
+++ b/app/src/main/res/layout/alert_informacion_personal.xml
@@ -114,7 +114,7 @@
         android:layout_height="40dp"
         android:background="#0E5891"
         android:gravity="center_horizontal|center_vertical"
-        android:text="@string/encuestador"
+        android:text="@string/nueva_persona"
         android:textColor="#FFFFFF"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
