--- a/app/src/main/res/layout/alert_listado_botones.xml
+++ b/app/src/main/res/layout/alert_listado_botones.xml
@@ -33,7 +33,7 @@
 
     <ScrollView
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_margin="10dp"
         android:background="@drawable/edit_text_1"
         app:layout_constraintBottom_toTopOf="@+id/LISTOBOTON"
