--- a/app/src/main/res/layout/activity_persona.xml
+++ b/app/src/main/res/layout/activity_persona.xml
@@ -183,7 +183,7 @@
                                 android:layout_height="200dp"
                                 android:layout_margin="10dp"
                                 android:background="@drawable/fondo2"
-                                android:onClick="Violencia">
+                                android:onClick="TrantornosMentales">
 
                                 <ImageView
                                     android:id="@+id/ICONOTRANSTORNOSMENTALES"
